<resources>
    <!--  GLOBALS  -->
    <string name="app_name">SigaMobile</string>
    <string name="toolbar_title">My View</string>
    <string name="studant_name_test">Aluno Aleatório</string>
    <string name="btn_continue">Continuar</string>
    <string name="new_user_title">Cadastro</string>

    <!--  LOGIN VIEW  -->
    <string name="title_login_view">Login</string>
    <string name="user_label">Usuário</string>
    <string name="user_hint">digite seu usuário</string>
    <string name="password_label">Senha</string>
    <string name="password_hint">digite sua senha</string>
    <string name="password_forget">Esqueci a senha</string>
    <string name="first_access">Cadastre-se aqui</string>
    <string name="btn_login">Entrar</string>
    <string name="login_fail">Usuário ou senha incorretos!</string>
    <string name="input_empty">Preencha usuário e senha!</string>
    <string name="no_internet">Verifique sua conexão à internet!</string>

    <!--  CHECK_REGISTRATION VIEW  -->
    <string name="check_registration_title">Digite as informações a seguir:</string>
    <string name="registration_label">Matrícula</string>
    <string name="registration_hint">Digite sua matrícula</string>
    <string name="rg_label">RG</string>
    <string name="rg_hint">Digite seu RG</string>
    <string name="input_check_registration_empty">Preencha matrícula e RG!</string>
    <string name="check_registration_fail">Dados não conferem, tente novamente!</string>
    <string name="already_registered_received">STUDANT ALREADY REGISTERED</string>
    <string name="already_registered_show">Estudante já está cadastrado no sistema!</string>

    <!--  CREATE USER VIEW  -->
    <string name="title_create_user">Crie seu login:</string>
    <string name="new_username_title">Usuário</string>
    <string name="new_username_hint">Digite o usuário que deseja</string>
    <string name="new_password_label">Senha</string>
    <string name="new_password_hint">Digite a senha que deseja</string>
    <string name="btn_create_user">Cadastrar</string>
    <string name="input_create_user_empty">Preencha usuário e senha!</string>
    <string name="create_user_fail">Nome de usuário já existe, tente novamente!</string>
    <string name="create_user_success">Usuário criado com sucesso!</string>
    <string name="login_error">Erro ao fazer login!</string>
    <string name="especial_characters">ESPECIAL CHARACTERS</string>
    <string name="alert_especials">Usuário não pode conter caracteres especiais!</string>
    <string name="only_numbers">ONLY NUMBERS</string>
    <string name="alert_numbers">Usuário não pode conter apenas números!</string>

    <!--  MAIN MENU VIEW  -->
    <string name="newsletter_title">Últimas Atualizações</string>
    <string name="btn_hours">Quadro de Horários</string>
    <string name="btn_identity">Identidade Estudantil</string>
    <string name="btn_scores">Minhas Notas</string>
    <string name="btn_classes">Turmas do Semestre</string>

    <!--  NEWSLETTER CARD  -->
    <string name="title_newsletter_card">18/05/2021 - ZL - REDES DE COMPUTADORES</string>
    <string name="notice_content_card">Novo Tópico de Aula: Protocolo de Internet - IP</string>


    <!--  IMAGES DESCRIPTIONS  -->
    <string name="go_to_my_hours">Ver meus horários</string>
    <string name="go_to_my_identity">Ver minha identidade estudantil</string>
    <string name="go_to_my_scores">Ver minhas notas</string>
    <string name="go_to_my_classes">Ver minhas turmas</string>
    <string name="btn_menu_bar">Menu lateral</string>
    <string name="newsletter_back">Ver notícia anterior</string>
    <string name="newsletter_forward">Ver próxima notícia</string>

</resources>