<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/default_toolbar"
        />

    <ImageView
        android:id="@+id/btn_back_create_user"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@mipmap/arrow_back_white_icon"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="@id/login_toolbar"
        app:layout_constraintStart_toStartOf="@id/login_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/login_toolbar"
        android:layout_marginStart="20dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/check_registration_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_create_user"
            android:textColor="@color/default_text"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="32dp"
        />

        <RelativeLayout
            android:id="@+id/username_group"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/check_registration_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp">

            <TextView
                android:id="@+id/username_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_username_title"
                android:textColor="@color/default_text"
                android:textSize="20sp"
            />

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/username_label"
                android:hint="@string/new_username_hint"
                android:textColorHint="@color/default_text"
                android:textColor="@color/default_text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="20sp"
                android:maxLines="1"
                android:background="@drawable/edit_text_default_background"
            />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_hash_group"
            android:layout_below="@+id/username_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20sp">

            <TextView
                android:id="@+id/password_hash_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password_label"
                android:textColor="@color/default_text"
                android:textSize="20sp"
            />

            <EditText
                android:id="@+id/edit_text_password_hash"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/password_hash_label"
                android:hint="@string/new_password_hint"
                android:textColorHint="@color/default_text"
                android:textColor="@color/default_text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="20sp"
                android:maxLines="1"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_default_background"
            />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_create_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="32dp"
            android:layout_below="@+id/password_hash_group"
            android:text="@string/btn_create_user"
            android:background="@drawable/btn_default_background"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAllCaps="false"
        />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>