<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/default_toolbar"
    />

    <ImageView
        android:id="@+id/btn_close_toolbar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@mipmap/exit_icon"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="@id/login_toolbar"
        app:layout_constraintStart_toStartOf="@id/login_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/login_toolbar"
        android:layout_marginStart="20dp"
    />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <ImageView
            android:id="@+id/login_top_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/splash_view_icon"
            android:layout_marginHorizontal="80dp"
        />
        
        <RelativeLayout
            android:id="@+id/user_group"
            android:layout_below="@+id/login_top_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp">
            
            <TextView
                android:id="@+id/user_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_label"
                android:textColor="@color/default_text"
                android:textSize="20sp"
            />

            <EditText
                android:id="@+id/edit_text_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/user_label"
                android:hint="@string/user_hint"
                android:textColorHint="@color/default_text"
                android:textColor="@color/default_text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="20sp"
                android:maxLines="1"
                android:background="@drawable/edit_text_default_background"
            />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_group"
            android:layout_below="@+id/user_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20sp">

            <TextView
                android:id="@+id/password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textColor="@color/default_text"
                android:textSize="20sp"
            />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/password_label"
                android:hint="@string/password_hint"
                android:textColorHint="@color/default_text"
                android:textColor="@color/default_text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="20sp"
                android:maxLines="1"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_default_background"
            />
        </RelativeLayout>

        <TextView
            android:id="@+id/password_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_forget"
            android:layout_below="@+id/password_group"
            android:textColor="@color/default_text"
            android:textSize="20sp"
            android:gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="32dp"
        />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="32dp"
            android:layout_below="@+id/password_forget"
            android:text="@string/btn_login"
            android:background="@drawable/btn_default_background"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAllCaps="false"
        />
        
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>